--- a/summary/util/preamble.tex
+++ b/summary/util/preamble.tex
@@ -38,6 +38,8 @@
 % for \enquote
 \usepackage{csquotes}
 
+\usepackage{booktabs}
+
 % Autoref names anpassen:
 %\addto\extrasenglish{%
 %  \renewcommand{\sectionautorefname}{Section}%
